# dual-stream-switcher

./: .gitignore  Makefile  README.md  build.sh  dual-stream-switcher.c  meson.build
gui/: dss-app.c  dss-app.h  dss-appwin.c  dss-appwin.h  dss-lib.c  dss-lib.h  dss-main.c  dss-window.ui  dss.gresource.xml
